--- a/package.json
+++ b/package.json
@@ -1,110 +1,160 @@
 {
-  "name": "issue_loader",
-  "version": "1.0.0",
-  "private": true,
-  "description": "Load issues from Jira and post them to Oracle DB",
-  "main": "index.js",
-  "scripts": {
-    "watch": "cls && rmdir ts_out\\src /s /q && babel src --config-file ./babel.config.js --out-dir ts_out\\src --extensions \".ts,.tsx\" --source-maps inline -w",
-    "start": "echo \"Error: no start specified. Use build or watch command\" && exit 1"
-  },
-  "author": "Yuri Yaryshev",
-  "license": "MIT",
-  "nyc": "^14.1.1",
-  "resolutions": {},
-  "plainDependencies": true,
-  "dependencies": {
-    "@babel/cli": "^7.6.4",
-    "@babel/core": "^7.6.4",
-    "@babel/generator": "^7.6.4",
-    "@babel/helper-plugin-utils": "^7.0.0",
-    "@babel/helper-split-export-declaration": "^7.4.4",
-    "@babel/node": "^7.6.3",
-    "@babel/parser": "^7.6.4",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
-    "@babel/plugin-proposal-optional-chaining": "^7.6.0",
-    "@babel/plugin-syntax-throw-expressions": "^7.2.0",
-    "@babel/plugin-syntax-typescript": "^7.3.3",
-    "@babel/plugin-transform-arrow-functions": "^7.2.0",
-    "@babel/plugin-transform-block-scoped-functions": "^7.2.0",
-    "@babel/plugin-transform-destructuring": "^7.6.0",
-    "@babel/plugin-transform-duplicate-keys": "^7.5.0",
-    "@babel/plugin-transform-function-name": "^7.4.4",
-    "@babel/plugin-transform-member-expression-literals": "^7.2.0",
-    "@babel/plugin-transform-modules-commonjs": "^7.6.0",
-    "@babel/plugin-transform-property-mutators": "^7.2.0",
-    "@babel/plugin-transform-shorthand-properties": "^7.2.0",
-    "@babel/plugin-transform-typescript": "^7.6.3",
-    "@babel/preset-env": "^7.6.3",
-    "@babel/preset-typescript": "^7.6.0",
-    "@babel/register": "^7.6.2",
-    "@babel/template": "^7.6.0",
-    "@babel/traverse": "^7.6.3",
-    "@babel/types": "^7.6.3",
-    "@types/babel__core": "^7.1.3",
-    "@types/babel__generator": "^7.6.0",
-    "@types/babel__template": "^7.0.2",
-    "@types/babel__traverse": "^7.0.7",
-    "@types/chai": "^4.2.4",
-    "@types/chai-datetime": "0.0.33",
-    "@types/debug": "^4.1.5",
-    "@types/elasticsearch": "^5.0.35",
-    "@types/expect": "^1.20.4",
-    "@types/express": "^4.17.1",
-    "@types/lodash": "^4.14.144",
-    "@types/mocha": "^5.2.7",
-    "@types/moment-timezone": "^0.5.12",
-    "@types/node": "^12.11.5",
-    "@types/oracledb": "^4.0.4",
-    "@types/prettier": "^1.18.3",
-    "@types/sinon": "^7.5.0",
-    "@types/sinon-chai": "^3.2.3",
-    "@types/uuid": "^3.4.5",
-    "@types/watch": "^1.0.1",
-    "axios": "^0.19.0",
-    "babel-loader": "^8.0.6",
-    "babel-plugin-module-resolver": "^3.2.0",
-    "babel-watch": "^7.0.0",
-    "bluebird": "^3.7.1",
-    "chai": "^4.2.0",
-    "chai-datetime": "^1.5.0",
-    "chai-like": "^1.1.1",
-    "chai-things": "^0.2.0",
-    "clean-webpack-plugin": "^3.0.0",
-    "clone-deep": "^4.0.1",
-    "commander": "^3.0.2",
-    "debug": "^4.1.1",
-    "expect": "^24.9.0",
-    "express": "^4.17.1",
-    "fast-deep-equal": "^2.0.1",
-    "html-webpack-plugin": "^3.2.0",
-    "http": "0.0.0",
-    "jira-connector": "^2.16.1",
-    "lodash": "^4.17.15",
-    "lodash.clonedeepwith": "^4.5.0",
-    "mkdirp": "^0.5.1",
-    "mocha": "^6.2.2",
-    "mocha-loader": "^3.0.0",
-    "mocha-steps": "^1.3.0",
-    "mocha-webpack": "^1.1.0",
-    "moment": "^2.24.0",
-    "moment-timezone": "^0.5.27",
-    "null-loader": "^3.0.0",
-    "oracledb": "^4.0.1",
-    "path": "^0.12.7",
-    "prettier": "^1.18.2",
-    "seed-random": "^2.2.0",
-    "sinon": "^7.5.0",
-    "sinon-chai": "^3.3.0",
-    "ts-mocha": "^6.0.0",
-    "ts-node": "^8.4.1",
-    "typescript": "^3.6.4",
-    "uuid": "^3.3.3",
-    "watch": "^1.0.2",
-    "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.9.0",
-    "webpack-node-externals": "^1.7.2"
-  },
-  "devDependencies": {}
+    "name": "issue_loader",
+    "version": "1.0.0",
+    "private": true,
+    "description": "Load issues from Jira and post them to Oracle DB",
+    "main": "index.js",
+    "scripts": {
+        "watch": "cls && babel src --config-file ./babel.ts.config.js --out-dir ts_out\\src --extensions \".ts,.tsx\" --source-maps inline -w",
+        "web_server": "cls && webpack --config webpack.react.config.js --watch",
+        "web_server_dev": "cls && webpack-dev-server --config webpack.react.config.js --open"
+    },
+    "author": "Yuri Yaryshev",
+    "license": "MIT",
+    "nyc": "^14.1.1",
+    "resolutions": {},
+    "plainDependencies": true,
+    "prettier": {
+        "tabWidth": 4,
+        "printWidth": 120
+    },
+    "dependencies": {
+        "@babel/cli": "^7.7.0",
+        "@babel/core": "^7.7.0",
+        "@babel/generator": "^7.6.4",
+        "@babel/helper-plugin-utils": "^7.0.0",
+        "@babel/helper-split-export-declaration": "^7.4.4",
+        "@babel/node": "^7.7.0",
+        "@babel/parser": "^7.6.4",
+        "@babel/plugin-proposal-class-properties": "^7.7.0",
+        "@babel/plugin-proposal-decorators": "^7.7.0",
+        "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
+        "@babel/plugin-proposal-optional-chaining": "^7.6.0",
+        "@babel/plugin-syntax-throw-expressions": "^7.2.0",
+        "@babel/plugin-syntax-typescript": "^7.3.3",
+        "@babel/plugin-transform-arrow-functions": "^7.2.0",
+        "@babel/plugin-transform-block-scoped-functions": "^7.2.0",
+        "@babel/plugin-transform-destructuring": "^7.6.0",
+        "@babel/plugin-transform-duplicate-keys": "^7.5.0",
+        "@babel/plugin-transform-function-name": "^7.4.4",
+        "@babel/plugin-transform-member-expression-literals": "^7.2.0",
+        "@babel/plugin-transform-modules-commonjs": "^7.7.0",
+        "@babel/plugin-transform-property-mutators": "^7.2.0",
+        "@babel/plugin-transform-shorthand-properties": "^7.2.0",
+        "@babel/plugin-transform-typescript": "^7.7.0",
+        "@babel/preset-env": "^7.7.1",
+        "@babel/preset-react": "^7.7.0",
+        "@babel/preset-typescript": "^7.7.0",
+        "@babel/register": "^7.7.0",
+        "@babel/template": "^7.6.0",
+        "@babel/traverse": "^7.6.3",
+        "@babel/types": "^7.6.3",
+        "@hot-loader/react-dom": "^16.10.2",
+        "@material-ui/core": "^4.5.2",
+        "@material-ui/icons": "^4.5.1",
+        "@material-ui/styles": "^4.5.2",
+        "@mojotech/json-type-validation": "^3.1.0",
+        "@types/babel__core": "^7.1.3",
+        "@types/babel__generator": "^7.6.0",
+        "@types/babel__template": "^7.0.2",
+        "@types/babel__traverse": "^7.0.7",
+        "@types/chai": "^4.2.4",
+        "@types/chai-datetime": "0.0.33",
+        "@types/debug": "^4.1.5",
+        "@types/elasticsearch": "^5.0.35",
+        "@types/expect": "^1.20.4",
+        "@types/express": "^4.17.2",
+        "@types/leveldown": "^4.0.0",
+        "@types/levelup": "^3.1.1",
+        "@types/lodash": "^4.14.144",
+        "@types/mocha": "^5.2.7",
+        "@types/moment-timezone": "^0.5.12",
+        "@types/node": "^12.12.5",
+        "@types/oracledb": "^4.0.4",
+        "@types/prettier": "^1.18.3",
+        "@types/react": "^16.9.11",
+        "@types/react-dom": "^16.9.3",
+        "@types/react-test-renderer": "^16.9.1",
+        "@types/sinon": "^7.5.0",
+        "@types/sinon-chai": "^3.2.3",
+        "@types/uuid": "^3.4.6",
+        "@types/watch": "^1.0.1",
+        "arraybuffer-to-string": "^1.0.2",
+        "assert-never": "^1.2.0",
+        "axios": "^0.19.0",
+        "babel-loader": "^8.0.6",
+        "babel-plugin-module-resolver": "^3.2.0",
+        "babel-watch": "^7.0.0",
+        "bluebird": "^3.7.1",
+        "chai": "^4.2.0",
+        "chai-datetime": "^1.5.0",
+        "chai-like": "^1.1.1",
+        "chai-things": "^0.2.0",
+        "clean-deep": "^3.1.0",
+        "clean-stack": "^2.2.0",
+        "clean-webpack-plugin": "^3.0.0",
+        "clone-deep": "^4.0.1",
+        "commander": "^3.0.2",
+        "cookie-parser": "^1.4.4",
+        "cross-env": "^6.0.3",
+        "debug": "^4.1.1",
+        "deepmerge": "^4.2.1",
+        "dependency-cruiser": "^5.2.2",
+        "expect": "^24.9.0",
+        "express": "^4.17.1",
+        "fast-clone": "^1.5.13",
+        "fast-deep-equal": "^2.0.1",
+        "html-webpack-plugin": "^3.2.0",
+        "http": "0.0.0",
+        "jira-connector": "^2.16.1",
+        "leveldown": "^5.4.1",
+        "levelup": "^4.3.2",
+        "lodash": "^4.17.15",
+        "lodash.clonedeepwith": "^4.5.0",
+        "mkdirp": "^0.5.1",
+        "mobx": "^5.14.2",
+        "mobx-react": "^6.1.4",
+        "mobx-react-lite": "^1.5.0",
+        "mocha": "^6.2.2",
+        "mocha-loader": "^3.0.0",
+        "mocha-steps": "^1.3.0",
+        "mocha-webpack": "^1.1.0",
+        "moment": "^2.24.0",
+        "moment-timezone": "^0.5.27",
+        "null-loader": "^3.0.0",
+        "nyc": "^14.1.1",
+        "oracledb": "^4.0.1",
+        "path": "^0.12.7",
+        "prettier": "^1.18.2",
+        "react": "^16.11.0",
+        "react-ace-editor": "0.0.3",
+        "react-dom": "^16.11.0",
+        "react-hot-loader": "^4.12.15",
+        "react-number-format": "^4.3.1",
+        "react-scripts": "^3.2.0",
+        "react-test-renderer": "^16.11.0",
+        "react-toolbox": "^2.0.0-beta.13",
+        "request": "^2.88.0",
+        "request-promise": "^4.2.5",
+        "runtypes": "^4.0.3",
+        "seed-random": "^2.2.0",
+        "sinon": "^7.5.0",
+        "sinon-chai": "^3.3.0",
+        "source-map-support": "^0.5.16",
+        "ts-interface-builder": "^0.2.1",
+        "ts-mocha": "^6.0.0",
+        "ts-node": "^8.4.1",
+        "typescript": "^3.6.4",
+        "url": "^0.11.0",
+        "uuid": "^3.3.3",
+        "watch": "^1.0.2",
+        "webpack": "^4.41.2",
+        "webpack-cli": "^3.3.10",
+        "webpack-dev-server": "^3.9.0",
+        "webpack-node-externals": "^1.7.2",
+        "winston": "^3.2.1",
+        "winston-daily-rotate-file": "^4.2.1",
+        "winston-sqlite3": "^1.1.1"
+    },
+    "devDependencies": {}
 }
